--- a/avrow-cli/Cargo.toml
+++ b/avrow-cli/Cargo.toml
@@ -7,11 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version="2.33.1", features=["yaml"] }
-avrow = { path = "../../ravro", features=["all"] }
-argh = "0.1.3"
+avrow = { path = "../../avrow", features=["all"] }
 anyhow = "1.0.32"
-colored = "2.0.0"
+structopt = "0.3.20"
 
 [[bin]]
 name = "av"
